feat(refactor): revision of the code